2003-05-23  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/Basic.h: remove declarations of functions
	fl_init_RGBdatabase and fl_lookup_RGBcolor as they are part of
	libflimage, not libforms.

2003-05-30  Angus Leeming  <angus.leeming@btopenworld.com>

	* Changes: renamed as NEWS.
	* COPYING: renamed as COPYING.LIB.
	* 00README: renamed as README.

2003-05-22  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/include/Makefile.am: make sure that forms.h is not distributed

2003-05-21  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* configure.ac: do not set VERSION explicitely, this is done in
	XFORMS_SET_VERSION.

	* config/xformsinclude.m4 (XFORMS_SET_VERSION): simplify a tiny bit

2003-05-22  Rouben Rostamian  <rostamian@umbc.edu>

	* image/rgb_db.c (fl_lookup_RGBcolor): this function fell off the
	dist at 1.0pre3. Now it is back again with a shiny new, more efficient
	implementation.

2003-05-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/include/Makefile.am (forms.h): create forms.h using the
	target stamp-forms, so that it remains untouched when AAA.h is
	regenerated but did not change.

	* lib/include/AAA.h.in: new file. This is the template from which
	AAA.h is generated
	
	* lib/include/.cvsignore: add AAA.h

	* configure.ac: call XFORMS_SET_VERSION; generate AAA.h from AAA.h.in

	* config/xformsinclude.m4 (XFORMS_SET_VERSION): new macro, which
	sets the VERSION string for xforms
	(XFORMS_CHECK_VERSION): simplify a bit

2003-04-24  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* image/image_fits.c (Bad_bpp): use abs() and not fabs(), since
	bpp is an int

2003-04-24  Angus Leeming  <angus.leeming@btopenworld.com>

	Migrate from imake to autoconf/automake.

	* Imakefile:
	* Imakefile.os2:
	* demos/Imakefile:
	* demos/Imakefile.os2:
	* fd2ps/Imakefile:
	* fd2ps/Imakefile.os2:
	* fdesign/Imakefile:
	* fdesign/Imakefile.os2:
	* fdesign/Imakefile.xxx:
	* gl/Imakefile:
	* image/Imakefile:
	* lib/Imakefile:
	* lib/Imakefile.os2: